@@ -984,6 +984,7 @@ LIBSPECTRUM_TAPE_BLOCK_LOOP_END		0x25
 LIBSPECTRUM_TAPE_BLOCK_SELECT		0x28
 
 LIBSPECTRUM_TAPE_BLOCK_STOP48		0x2a
+LIBSPECTRUM_TAPE_BLOCK_SET_SIGNAL_LEVEL	0x2b
 
 LIBSPECTRUM_TAPE_BLOCK_COMMENT		0x30
 LIBSPECTRUM_TAPE_BLOCK_MESSAGE		0x31
@@ -1188,6 +1189,7 @@ int values[]				HARDWARE
 
 int level				DATA_BLOCK
 					PAUSE
+					SET_SIGNAL_LEVEL
 
 libspectrum_byte bit0_pulse_count	DATA_BLOCK
 
